# cairo-wasm-demo

./: .gitignore  Cargo.toml  README.md  hello.py  pyproject.toml
.trunk/: trunk.yaml
app/: package-lock.json  vite.config.ts
app/src/: App.tsx  cairo.worker.ts  cairo_wasm_demo.d.ts  cairo_wasm_demo.js  cairo_wasm_demo_bg.wasm.d.ts
cairo_programs/: fibonacci.cairo  fibonacci.json
src/: lib.rs
