[package]
name = "cairo-wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "dc1c49bdc0d5ec69a36ac22559dde38c0b724991", features = [
  "mod_builtin",
], default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.2"
stwo-cairo-adapter = { version = "*" }
stwo_cairo_prover = "*"
cairo-air = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }


[profile.release]
opt-level = "s" # Optimize for size


[patch.crates-io]
stwo-cairo-adapter = { git = "https://github.com/Eikix/stwo-cairo", rev = "7892e215cdef3618034a11ac9c3f69f6273c817e" }
stwo_cairo_prover = { git = "https://github.com/Eikix/stwo-cairo", rev = "7892e215cdef3618034a11ac9c3f69f6273c817e" }
cairo-air = { git = "https://github.com/Eikix/stwo-cairo", rev = "7892e215cdef3618034a11ac9c3f69f6273c817e" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
