[package]
name = "cairo-wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "9c44e1cef56c6ea557d6441e27ad3c756bbbe8a9", features = [
  "mod_builtin",
], default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.2"
stwo-cairo-adapter = { version = "*" }
stwo_cairo_prover = "*"
cairo-air = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }


[profile.release]
opt-level = "s" # Optimize for size


[patch.crates-io]
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "2753bfe28bcf5d8a02975a18f9775ff7e43a236c" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "2753bfe28bcf5d8a02975a18f9775ff7e43a236c" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "2753bfe28bcf5d8a02975a18f9775ff7e43a236c" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
